correct intendation and spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,11 +10,6 @@ body {
   color: #3399FF;
 }
 
-.body-style {
-  background-color: lightblue;
-  font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
 .heading-style {
   color: 	#C02F1D;
 }
